Logo z-index fixed

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
   border-radius: 50%;
   opacity: 0.7;
   filter: hue-rotate(125deg);
-  z-index: -1;
 }
 
 .logoTitle {
